<resources>
    <string name="app_name">Vending store</string>
    <string name="add_to_cart">В корзину</string>
    <string name="search_for_products">Поиск товаров</string>
    <string name="tech_product_price">Цена товара</string>
    <string name="tech_product_name">Название товара</string>
    <string name="tech_product_description">Описание товара</string>
    <string name="image_of_product">image of product</string>
    <string name="like_button">like_button</string>
    <string name="all_products">Все продукты</string>
    <string name="all_liked_products">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="first_name_last_name">Имя, фамилия</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>
    <string name="date_of_birth">День рождения</string>
    <string name="account_data">Данные аккаунта</string>
    <string name="gender">Пол</string>
    <string name="user_image">Изображение пользователя</string>
    <string name="default_gender_text">Не указан</string>
    <string name="Save">Сохранить</string>
</resources>