<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="4"
                android:contentDescription="@string/image_of_product"
                android:minHeight="60dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="6"
                android:layout_marginStart="10dp">

            <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tech_product_price" />

            <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:text="@string/tech_product_name" />

            <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tech_product_description" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:layout_gravity="bottom">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_cart"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/blue" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" 
                    android:contentDescription="@string/like_button"
                    android:src="@drawable/heart"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>