<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:contentDescription="@string/image_of_product"
                android:background="@color/gray"
                android:layout_margin="5dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="7">

            <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/tech_product_price" />

            <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tech_product_name" />

            <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tech_product_description" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>