<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Presentation.View.ProfileView">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

            <ImageView
                    android:id="@+id/image_view_user"
                    android:layout_height="60dp"
                    android:layout_width="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/user_image" />

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/profile_hints_color"
                        android:text="@string/first_name_last_name" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_username"
                        android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_data"
                android:gravity="center" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/profile_hints_color" />

            <TextView
                    android:id="@+id/text_view_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/profile_hints_color" />

            <TextView
                    android:id="@+id/text_view_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/profile_hints_color" />

            <TextView
                    android:id="@+id/text_view_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/profile_hints_color" />

            <TextView
                    android:id="@+id/text_view_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>