<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Presentation.View.ProductInformationView"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_of_product"/>

            <ImageButton
                    android:id="@+id/like_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/like_button"
                    android:src="@drawable/heart"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="@color/transparent"/>

        </RelativeLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/add_to_cart" />

        </LinearLayout>


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>